# goit-pythonweb-hw-06

./: README.md  db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 002a3b90c995_init.py  34ab429dd69e_upgrated_mark.py  73b364b14148_updated_columns_with_additional_fields.py  a2299e744377_updated_columns_with_additional_fields.py  d7df89f97511_init.py  f4e58d4fa441_upgrated_mark.py
